Actions component UI

--- a/mob/src/translations/en/translation.json
+++ b/mob/src/translations/en/translation.json
@@ -6,5 +6,9 @@
     "donate": "Doniraj",
     "about_us": "O nama",
     "contact": "Kontakt"
+  },
+  "actionsList": {
+    "find_out_more": "Find out more",
+    "status": "Status"
   }
 }
