--- a/mob/src/translations/sr/translation.json
+++ b/mob/src/translations/sr/translation.json
@@ -6,6 +6,10 @@
       "donate": "Doniraj",
       "about_us": "O nama",
       "contact": "Kontakt"
+    },
+    "actionsList": {
+      "find_out_more": "Saznaj Više",
+      "status": "Status"
     }
   }
 }
