[MOB-17] contact screen

--- a/mob/src/translations/en/translation.json
+++ b/mob/src/translations/en/translation.json
@@ -6,5 +6,12 @@
     "donate": "Doniraj",
     "about_us": "O nama",
     "contact": "Kontakt"
+  },
+  "contactScreen": {
+    "contact": "CONTACT",
+    "socialMedia": "Social Media",
+    "contactUs": "Contact Us",
+    "callUs": "Call",
+    "sendEmail": "Mail"      
   }
 }
