--- a/mob/src/translations/sr/translation.json
+++ b/mob/src/translations/sr/translation.json
@@ -9,7 +9,10 @@
     },
     "contactScreen": {
       "contact": "KONTAKT",
-      "socialMedia": "Društvene mreže"
+      "socialMedia": "Društvene mreže",
+      "contactUs": "Kontaktirajte Nas",
+      "callUs": "Pozovite",
+      "sendEmail": "Mail"
     }
   }
 }
