--- a/mob/src/translations/en/translation.json
+++ b/mob/src/translations/en/translation.json
@@ -9,6 +9,7 @@
   },
   "actionsList": {
     "find_out_more": "Find out more",
-    "status": "Status"
+    "status": "Status",
+    "trending": "Trending"
   }
 }
